--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/png" href="images/Elevator_icon.png" />
+    <!-- <link rel="icon" type="image/svg+xml" href="images/elevator-icon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="エレベーター監視システムのウェブサイトです"/>
     <title>Elevator Tracker</title>
   </head>
   <body>
